--- a/jsnack3/index.html
+++ b/jsnack3/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    
+    <div id="results-container">
+
+    </div>
 
     <script type="text/javascript" src="myscript.js"></script>
 </body>
